--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
-<h1>
-    HELLO WORLD!!!
-</h1>
+<h1> hello world</h1>
+
+<script 
+       src="https://static.peerboard.dev/embed/embed.js" 
+       data-forum-widget-mode data-forum-id="1579095919" 
+       data-forum-post-limit="5"
+>
+</script>
+
+<noscript>
+   Please enable JavaScript to view <a href="https://peerboard.dev/1579095919" target="_blank" rel="noopener">Community Posts</a>
+</noscript>
