--- a/index.html
+++ b/index.html
@@ -10,3 +10,5 @@
 <noscript>
    Please enable JavaScript to view <a href="https://peerboard.dev/1579095919" target="_blank" rel="noopener">Community Posts</a>
 </noscript>
+
+<script src="http://static.local.is/embed/embed.js" data-forum-id="561465857" data-forum-widget-type="comments" data-forum-space-id="339830927" data-forum-widget-exclude="query"></script><noscript>Please enable JavaScript to view<a href="http://local.is/561465857" target="_blank" rel="noopener">Community Posts</a></noscript>
