--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <h1> hello world</h1>
 
+<script src="https://telegram.org/js/telegram-web-app.js"></script>
+
 <script 
        src="https://static.peerboard.dev/embed/embed.js" 
        data-forum-widget-mode data-forum-id="1579095919" 
