--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 
 <h1>TELEGRAM MINI APP</h1>
 
+<div id="app"></div>
+
 <script>
-  alert('I AM ALIVE!!!');
+  document.getElementById('app').innerText = JSON.stringify(window.Telegram.WebApp);
 </script>
